# codex-father

./: .codex-father-state.json  .eslintrc.cjs  .gitignore  .mcp.json  .npmignore  .prettierignore  .prettierrc  .releaserc  .tsbuildinfo  .tsbuildinfo.build  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_GUIDE.md  DEPLOY.md  DEVELOPMENT.md  LICENSE  MCP_QUICKSTART.md  Makefile  NPX_INTEGRATION_SUMMARY.md  NPX_RELEASE_GUIDE.md  QUICK_DEPLOY.md  README.en.md  README.md  README.zh-CN.md  TEST-COMMANDS.md  VERSION_MAIN_5.0.0.md  codex-father-1.0.0.tgz  codex-mcp-blackbox-test-report.md  demo_fixes.sh  eslint.config.js  job.sh  mcp_init_helper.sh  mcp_wizard.sh  mypy.ini  openai_codex_mcp.json  package-lock.json  package.json  package.json.test  pnpm-lock.yaml  (+27 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CI_RELEASE_GUIDE.md  README.md
.husky/: pre-commit  pre-push
.serena/: project.yml
claudedocs/: code-analysis-report.md
config/: README.md  codex.sqlite3  secret_key
core/: README.md
docs/: DESIGN-async-mcp.md  README.en.md  README.md  README.phases.md  RELEASE_FLOW_MCP.md  VERSION_1.0.0.md  VERSION_MCP_1.2.0.md  batch-testing-guide.md  capability-assessment-2025-10-02.md  codex-father-test-report-2025-10-13.md  codex-non-interactive.md  debug.md  development.md  environment-variables-reference.en.md  environment-variables-reference.md  environment-variables.csv  environment-variables.json  mcp-integration.md  mvp1-manual-test-plan.md  network-check.md  phase-3.1-completion-report.md  phase-3.1-final-report.md  prd-006.md  prd-draft.md  requirements-stage1-non-interactive.md  test-manual.md  todo.list.md  usage.md
job.d/: 00_bootstrap.sh  01_commands.sh
lib/: README.md  common.sh  param_validator.sh  presets.sh
mcp/: README.md  example.mcp.json  probe-config.sh  server.sh
my-stark-scripts/: README.md  add-subtree.sh  scaffold_prd.sh  update-subtree.sh
phases/: README.md
refer-research/: index.md
refer-research/openai-codex-mcp/: .env.template  README.md  codex_server.py  pyproject.toml
scripts/: README.md  cache-guard.mjs  checklist-sync.mjs  demo-ok.sh  fix-schemas.py  manual-test.sh  mcp-extract-changelog.mjs  mcp_list_test.cjs  mcp_probe.cjs  merge-test-results.ts  orchestrate-demo.ts  quick-test.sh  release-mcp-manual.sh  release-mcp.sh  release-precheck.sh  release.sh  rmcp-client.mjs  run-batch-tests.ts  run-split-unit-tests.ts  run_write_e2e_in_container.sh  smoke-orchestrate.sh  smoke.js  test-smart.sh  validate-session.sh
specs/: archive-checklist-followup-tasks.md  archive-requirements-checklist-status.md  archive-requirements-checklist.md
src/: README.md  (+1 more)
(+1084 files in other folders)
