[project]
name = "codex-as-mcp"
version = "2025.9.16.1"
description = "MCP server that provides access to codex CLI for code generation and review"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "kky", email = "kky42@example.com"}
]
keywords = ["mcp", "codex", "code-generation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.12.4",
]

[project.scripts]
codex-as-mcp = "codex_as_mcp.server:main"

[project.urls]
Homepage = "https://github.com/kky42/codex-as-mcp"
Repository = "https://github.com/kky42/codex-as-mcp"
Issues = "https://github.com/kky42/codex-as-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_as_mcp"]

[dependency-groups]
dev = [
    "twine>=6.1.0",
]
